--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -254,6 +254,21 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-xl-8 col-lg-7 mt-4">
+      <!-- Line Chart -->
+      <div class="card shadow mb-4">
+        <div class="card-body">{{chart11|safe}}</div>
+      </div>
+    </div>
+    <div class="col-xl-4 col-lg-5 mt-4">
+      <!-- Indicator Chart -->
+      <div class="card shadow mb-4">
+        <div class="card-body">{{chart12|safe}}</div>
+      </div>
+    </div>
+  </div>
+
   <!-- /.container-fluid -->
   <!-- If not successful login -->
   {% else %}
