--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -269,6 +269,26 @@
     </div>
   </div>
 
+  <div class="col-xl-6 col-xxl-12">
+    <!-- Team members / people dashboard card example-->
+    <div class="card mb-4">
+        <div class="card-header">People</div>
+        <div class="card-body">
+            <!-- Item 1-->
+            <div class="d-flex align-items-center justify-content-between mb-4">
+                <div class="d-flex align-items-center flex-shrink-0 me-3">
+                    <div class="avatar avatar-xl me-3 bg-gray-200"><img class="avatar-img img-fluid" src="assets/img/illustrations/profiles/profile-1.png" alt=""></div>
+                    <div class="d-flex flex-column fw-bold">
+                        <a class="text-dark line-height-normal mb-1" href="#!">Sid Rooney</a>
+                        <div class="small text-muted line-height-normal">Position</div>
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
   <!-- /.container-fluid -->
   <!-- If not successful login -->
   {% else %}
